--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <body>
     <div class="container">
       <div class="sidebar">
+        <div class="profile-container">
+          <div class="profile-frame">
+            <img src="images/profile.jpg" />
+          </div>
+        </div>
       </div>
       <div class="info-container">
       </div>
