add background to profile image

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <div class="container">
       <div class="sidebar">
         <div class="profile-container">
-          <div class="profile-frame">
-            <img src="images/profile.jpg" />
+          <div class="profile-background">
+          </div>
+          <div class="profile-frame outter-frame">
+            <div class="profile-frame inner-frame">
+              <img src="images/profile.jpg" />
+            </div>
           </div>
         </div>
       </div>
