add menu options

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             </div>
           </div>
         </div>
+        <div class="menu-items-container">
+          <div class="title-container">
+            Fatemeh Karimi
+          </div>
+          <div class="menu-item">About</div>
+          <div class="menu-item">Education</div>
+          <div class="menu-item">Job Experiences</div>
+          <div class="menu-item">Skills</div>
+        </div>
       </div>
       <div class="info-container">
       </div>
