--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <div class="title-container">
             Fatemeh Karimi
           </div>
-          <div class="menu-item">About</div>
-          <div class="menu-item">Education</div>
-          <div class="menu-item">Job Experiences</div>
-          <div class="menu-item">Skills</div>
+          <div class="menu-item"><a href="about.html">About</a></div>
+          <div class="menu-item"><a href="education.html">Education</a></div>
+          <div class="menu-item"><a href="experiences.html">Job Experiences</a></div>
+          <div class="menu-item"><a href="skills.html">Skills</a></div>
         </div>
       </div>
       <div class="info-container">
