remove menu of sidebar. use an info card instead

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <div class="container">
       <div class="sidebar">
         <div class="profile-container">
-          <div class="profile-background">
-          </div>
           <div class="profile-frame outter-frame">
             <div class="profile-frame inner-frame">
               <img src="images/profile.jpg" />
@@ -17,13 +15,12 @@
           </div>
         </div>
         <div class="menu-items-container">
-          <div class="title-container">
+          <div class="title-container name-container">
             Fatemeh Karimi
           </div>
-          <div class="menu-item"><a href="about.html">About</a></div>
-          <div class="menu-item"><a href="education.html">Education</a></div>
-          <div class="menu-item"><a href="experiences.html">Job Experiences</a></div>
-          <div class="menu-item"><a href="skills.html">Skills</a></div>
+          <div class="title-container job-container">
+            Front-End Engineer
+          </div>
         </div>
       </div>
       <div class="info-container">
