add social links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
             Fatemeh Karimi
           </div>
           <div class="title-container job-container">
-            Front-End Engineer
+            Software Engineer
+          </div>
+          <div class="social-container">
+            <a href="https://www.linkedin.com/in/fatemeh-karimi-86b466145/">
+              <img src="images/linkedin.png" />
+            </a>
+            <a href="https://github.com/fatemehkarimi">
+              <img src="images/github.png" />
+            </a>
+            <a href="mailto:fatemehkarimi.001101@gmail.com">
+              <img src="images/email.jpg" />
+            </a>
           </div>
         </div>
       </div>
