--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         </div>
       </div>
       <div class="info-container">
+        <div class="info-wrapper">
+          <h1>Hi, I'm Fatemeh Karimi</h1>
+          <p>
+            I am a motivated, recently graduated software engineer from Isfahan university of technology
+who bravely follows my dreams. I am energetic for learning new things, from inside and
+outside the world of computer science. As a self-learner, I spend most of my time learning
+what I enjoy or what I find helpful in solving problems that I encounter at work as well as in
+real life.
+          </p>
+        </div>
       </div>
     </div>
   </body>
