--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="profile-container">
           <div class="profile-frame outter-frame">
             <div class="profile-frame inner-frame">
-              <img src="images/profile.jpg" />
+              <img src="images/profile.png" />
             </div>
           </div>
         </div>
@@ -38,11 +38,10 @@
         <div class="info-wrapper">
           <h1>Hi, I'm Fatemeh Karimi</h1>
           <p>
-            I am a motivated, recently graduated software engineer from Isfahan university of technology
-who bravely follows my dreams. I am energetic for learning new things, from inside and
-outside the world of computer science. As a self-learner, I spend most of my time learning
-what I enjoy or what I find helpful in solving problems that I encounter at work as well as in
-real life.
+            I am a master student of software engineering at Iran university of science and technology.
+I am energetic for learning new things, from inside and outside the world of computer science.
+As a self-learner, I spend most of my time learning what I enjoy or what I find helpful
+in solving problems that I encounter at work as well as in real life.
           </p>
         </div>
       </div>
