add personal information

--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@ As a self-learner, I spend most of my time learning what I enjoy or what I find 
 in solving problems that I encounter at work as well as in real life.
           </p>
         </div>
+        <div class="general-info-container">
+          <div class="personal-info-container">
+            <h1>personal Information</h1>
+            <table>
+              <tr>
+                <td class="table-title">FULL NAME</td>
+                <td class="table-info">Fatemeh Karimi</td>
+              </tr>
+              <tr>
+                <td class="table-title">D.O.B</td>
+                <td class="table-info">2 Jan 1998</td>
+              </tr>
+              <tr>
+                <td class="table-title">LOCATION</td>
+                <td class="table-info">Isfahan, Iran</td>
+              </tr>
+              <tr>
+                <td class="table-title">EMAIL</td>
+                <td class="table-info"><a href="mailto:fatemehkarimi.001101@gmail.com">fatemehkarimi.001101@gmail.com</a></td>
+              </tr>
+            </table>
+          </div>
+          <div class="education-info-container">
+            <h1>education<h1>
+          </div>
+        </div>
       </div>
     </div>
   </body>
