add education info

--- a/index.html
+++ b/index.html
@@ -67,7 +67,28 @@ in solving problems that I encounter at work as well as in real life.
             </table>
           </div>
           <div class="education-info-container">
-            <h1>education<h1>
+            <h1>education</h1>
+            <div class="university-container">
+              <img src='images/iust.png'/>
+              <div class="university-detail">
+                <div>
+                Master's of software engineering
+                </div>
+                <div>
+                  <i>2021-Ongoing</i>
+                </div>
+              </div>
+            </div>
+            <div class="university-container">
+              <img src="images/iut.png"/>
+              <div class="university-detail">
+                <div>Bachlor's of computer engineering</div>
+                <div>
+                  <i>(2016-2020)</i>
+                </div>
+                <div>GPA: <i>3.2</i> / 4</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
