--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ in solving problems that I encounter at work as well as in real life.
               </tr>
               <tr>
                 <td class="table-title">LOCATION</td>
-                <td class="table-info">Isfahan, Iran</td>
+                <td class="table-info">Iran</td>
               </tr>
               <tr>
                 <td class="table-title">EMAIL</td>
